# Qt-Apps

Qt Notes/: Qt Quick Layouts Ex.txt  Recommended Settings for Qt Creator
Qt-Console/Qt6-Core-Sample/: CMakeLists.txt  main.cpp  userinteractor.cpp  userinteractor.h
Qt-Quick/Qt6-Quick-Example/: AudioInfoBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  TextButton.qml  main.cpp  pre_build.bat
